--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -249,7 +249,7 @@ if(NRN_ENABLE_PYTHON AND PYTEST_FOUND)
         GROUP hoctests
         NAME ${name}_${ext} ${${ext}_preload} # PRELOAD_SANITIZER for Python
         COMMAND ${${ext}_exe} "${hoc_script}"
-        SCRIPT_PATTERNS "${hoc_script}" "tests/${name}.json" "tests/${name}/*" ${${ext}test_utils})
+        SCRIPT_PATTERNS "${hoc_script}" "tests/${name}.json" ${${ext}test_utils})
     endforeach()
   endforeach()
 
