--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -140,6 +140,7 @@ jobs:
           cmake --build . --target cover_begin
           export PATH=`pwd`/bin:$PATH;
           xvfb-run ctest -VV --output-on-failure;
+          echo "from neuron import h; import neuron; neuron.test();neuron.test_rxd();" > tests.py
           for python in "${PYTHON_MIN}" "${PYTHON_MAX}"
           do
             echo "Using ${python}"
@@ -148,7 +149,7 @@ jobs:
               PATH="${PWD}/bin:${PATH}" \
               LD_LIBRARY_PATH="${PWD}/lib:${LD_LIBRARY_PATH}" \
               DYLD_LIBRARY_PATH="${PWD}/lib:${DYLD_LIBRARY_PATH}" \
-              coverage run "${python}" -c "from neuron import h; import neuron; neuron.test();neuron.test_rxd();"
+              "${python}" -m coverage run tests.py
           done
           cmake --build . --target cover_html
         env:
