--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -136,11 +136,11 @@ jobs:
           # The Linux runners apparently have 2 cores, but jobs were being killed when we did not specify this explicitly.
           # https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners#supported-runners-and-hardware-resources
           # By default we get a modern version of CMake that understands --parallel.
-          cmake --build . --target cover_begin
           cmake --build . --parallel 2
-          export PATH=`pwd`/bin:$PATH;
+          cmake --build . --target cover_baseline
           xvfb-run ctest -VV --output-on-failure;
-          cmake --build . --target cover_html
+          cmake --build . --target cover_collect
+          cmake --build . --target cover_combine
         env:
           MATRIX_EVAL: "CC=gcc CXX=g++"
           PYTHON_MIN_NAME: "python${{ env.PY_MIN_VERSION }}"
